--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 Django==5.1.1
 django-session-timeout==0.1.0
+pillow==10.4.0
 six==1.16.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
