--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
-asgiref==3.8.1
-Django==5.1.1
-django-session-timeout==0.1.0
-pillow==10.4.0
-six==1.16.0
-sqlparse==0.5.1
-typing_extensions==4.12.2
-tzdata==2024.1
+asgiref==3.7.2
+certifi==2024.7.4
+charset-normalizer==3.4.1
+distlib==0.3.8
+Django==5.0.2
+djangorestframework==3.15.2
+filelock==3.15.4
+idna==3.10
+jsonpath==0.82.2
+pillow==11.1.0
+pipenv==2024.0.1
+platformdirs==4.2.2
+python-decouple==3.8
+requests==2.32.3
+sqlparse==0.4.4
+typing_extensions==4.9.0
+tzdata==2023.4
+urllib3==2.3.0
+virtualenv==20.26.3
