--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,31 @@
-asgiref==3.7.2
-certifi==2024.7.4
+asgiref==3.8.1
+Brotli==1.1.0
+cairocffi==1.7.1
+CairoSVG==2.7.1
+certifi==2024.12.14
+cffi==1.17.1
 charset-normalizer==3.4.1
-distlib==0.3.8
-Django==5.0.2
-djangorestframework==3.15.2
-filelock==3.15.4
+cssselect2==0.8.0
+defusedxml==0.7.1
+Django==5.1.5
+django-rest-framework==0.1.0
+django-session-timeout==0.1.0
+djangorestframework==3.16.0
+fonttools==4.57.0
 idna==3.10
-jsonpath==0.82.2
-pillow==11.1.0
-pipenv==2024.0.1
-platformdirs==4.2.2
+pillow==11.2.1
+pycparser==2.22
+pydyf==0.11.0
+pyphen==0.17.2
 python-decouple==3.8
 requests==2.32.3
-sqlparse==0.4.4
-typing_extensions==4.9.0
-tzdata==2023.4
+six==1.17.0
+sqlparse==0.5.3
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.3.0
-virtualenv==20.26.3
+weasyprint==65.1
+webencodings==0.5.1
+zopfli==0.2.3.post1
